# 2d-pixel-renderer

./: CMakeLists.txt  README.md  main.cpp
src/: file_helper.cpp  file_helper.h  imgui_pixel_renderer.cpp  imgui_pixel_renderer.h  imgui_wnd.cpp  imgui_wnd.h
